fix(navbar): collapse navbar on mobile devices

--- a/app/assets/stylesheets/bootstrap_custom.scss
+++ b/app/assets/stylesheets/bootstrap_custom.scss
@@ -42,15 +42,6 @@ th {
   }
 }
 
-.navbar {
-  height: 48px;
-}
-
-.nav-link {
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-}
-
 .modal {
   text-align: center;
 }
